--- a/CourseOutcomes.tex
+++ b/CourseOutcomes.tex
@@ -30,7 +30,7 @@ CO11: To perform in the team, contribute to the team and mentor/lead the team
 %PO9 Individual and Team work (3)\\
 \newpage
 \begin{table}[ht]
-\caption*{\textbf{CO-PO Mapping}}
+\caption*{\textbf{CO-PO and PSO Mapping}}
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|}
 \hline
@@ -52,9 +52,9 @@ Average & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 3  &  & &\\ \hline
 }
 \end{table}
 $\*$ Attainment level: \\ 1: Slight (low) \\2: Moderate (medium)	\\3: Substantial (high)
-\\POs:\vspace{-0.5em}\\PO1: Engineering knowledge,\\ PO2: Problem analysis,\\ PO3: Design of solutions, \\PO4: Conduct investigations of complex problems,
+\\POs(Program Outcomes):\vspace{-0.5em}\\PO1: Engineering knowledge,\\ PO2: Problem analysis,\\ PO3: Design of solutions, \\PO4: Conduct investigations of complex problems,
 \\PO5: Engineering tool usage,\\ PO6: Engineer and the world,\\ PO7: Ethics, \\PO8: Individual and collaborative work,\\ PO9: Communication, 
 \\PO10: Project management and finance,\\PO11: Life-long learning.
-\\PSOs:\vspace{-0.5em}\\PSO1: Computer-based systems development,\\ PSO2: Software development,\\ PSO3: Computer communications and Internet applications.
+\\PSOs(Program Specific Outcomes):\vspace{-0.5em}\\PSO1: Computer-based systems development,\\ PSO2: Software development,\\ PSO3: Computer communications and Internet applications.
 
 \end{titlepage}
